# STL-Vision-Pathplanner

./: .gitignore  README.md  ROS2_INTEGRATION.md  config.py  data_generator.py  generate_multiclass.py  logger.py  main.py  mouse.stl  real_image_labeler.py  realtime_detector.py  requirements.txt  ros2_path_publisher.py  run_detector.sh  settings.yaml  setup.py  stl_processor.py  test_ros2_detection.py  tool_path_planner.py  train_detector.py  utils.py
stl_detector_ros2/: CMakeLists.txt  package.xml
stl_detector_ros2/config/: detection_params.yaml
stl_detector_ros2/launch/: detection.launch.py
stl_detector_ros2/msg/: Detection.msg  DetectionArray.msg
stl_detector_ros2/stl_detector_ros2/: __init__.py  detection_node.py
